@@ -75,6 +75,7 @@ Beta1 released
 * Fixed a compiler error when running with CUDA on Ampere GPUs (issue BlendLuxCore#626)
 * Fixed a crash when using an image pipeline with only NOP plugin
 * CPU code now rejects NaN/Inf sample values for AOVs like GPU code
+* Avoid to generate NaN volume transmittance if the segment is infinite
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
